# scpi

./: .gitignore  CHANGELOG.md  README.md
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish-python.yml
Python/: READ_ME.md  __scpi_plot.csv  scpi_illustration-multi.py  scpi_illustration.py  scpi_illustration_plot-multi.py  scpi_illustration_plot.py
Python/docs/: index.rst  scest.rst  scpi.rst
Python/docs/_build/doctrees/: environment.pickle  index.doctree  (+2 more)
Python/scpi_pkg/: LICENSE  README.md  pyproject.toml  setup.cfg
Python/scpi_pkg/docs/: Legal.rst  conf.py  index.rst  scdata.rst  scdataMulti.rst  scest.rst  scpi.rst  scplot.rst  scplotMulti.rst
Python/scpi_pkg/docs/_build/doctrees/: Legal.doctree  environment.pickle  index.doctree  scdata.doctree  scdataMulti.doctree  scest.doctree  scpi.doctree  scplot.doctree  scplotMulti.doctree
Python/scpi_pkg/docs/_build/html/: .buildinfo  Legal.html  genindex.html  index.html  objects.inv  scdata.html  scdataMulti.html  scest.html  scpi.html  scplot.html  scplotMulti.html  search.html  searchindex.js
Python/scpi_pkg/docs/_build/html/_modules/: index.html
Python/scpi_pkg/docs/_build/html/_modules/scpi_pkg/: scdata.html  scdataMulti.html  scest.html  scpi.html  scplot.html  scplotMulti.html
Python/scpi_pkg/docs/_build/html/_sources/: index.rst.txt  scdata.rst.txt  scdataMulti.rst.txt  scest.rst.txt  scpi.rst.txt  scplot.rst.txt  scplotMulti.rst.txt
Python/scpi_pkg/src/scpi_pkg/: funs.py  scdata.py  scdataMulti.py  scest.py  scpi.py  scplot.py  scplotMulti.py
Python/scpi_pkg/src/scpi_pkg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Python/scpi_pkg/tests/: test_scdataMulti.py
Python/src/scpi_pkg/: funs.py  scdata.py  scpi.py  scplot.py
Python/src/scpi_pkg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
R/: builder_checker_package.R  scpi_germany.csv  scpi_illustration-multi.R  scpi_illustration.R  scpi_illustration_plot-multi.R  scpi_illustration_plot.R
R/scpi/: .Rbuildignore  .Rhistory  DESCRIPTION  NAMESPACE  cran-comments.md
R/scpi.Rcheck/: 00install.out  scpi-Ex.R  scpi-Ex.Rout  scpi-Ex.timings
R/scpi.Rcheck/scpi/: DESCRIPTION  INDEX  NAMESPACE
R/scpi/R/: .Rhistory  data.R  scdata.R  scdataMulti.R  scdataMulti_methods.R  scdata_methods.R  scest.R  scest_methods.R  scpi-package.R  scpi.R  scpi_methods.R  scplot.R  scplotMulti.R  supporting_functions.R
R/scpi/data/: .Rhistory  Germany.RData  scpi_germany.RData
R/scpi/inst/: CITATION  references.bib
R/scpi/man/: Germany.Rd  coef.scest.Rd  coef.scpi.Rd  print.scdata.Rd  print.scdataMulti.Rd  print.scest.Rd  print.scpi.Rd  scdata.Rd  scdataMulti.Rd  scest.Rd  scpi-package.Rd  scpi.Rd  scpi_germany.Rd  scplot.Rd  scplotMulti.Rd  summary.scdata.Rd  summary.scdataMulti.Rd  summary.scest.Rd  summary.scpi.Rd
R/scpi/tests/: testthat.R
stata/: lscpi.mlib  scdata.ado  scdata.sthlp  scdatamulti.ado  scdatamulti.sthlp  scest.ado  scest.sthlp  scpi.ado  scpi.pkg  scpi.sthlp  scpi_germany.dta  scpi_illustration-multi.do  scpi_illustration.do  scpi_illustration_plot-multi.do  scpi_illustration_plot.do  scplot.ado  scplot.sthlp  scplot_data.dta  scplotmulti.ado  scplotmulti.sthlp  stata.toc
(+60 files in other folders)
