[metadata]
name = scpi_pkg
version = attr: scpi_pkg.version.__version__
author = Filippo Palomba
author_email = fpalomba@princeton.edu
description = The package computes point estimates and prediction intervals for Synthetic Control methods as proposed in Cattaneo, Feng, and Titiunik (2021).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://nppackages.github.io/scpi/
project_urls =
	Bug Tracker = https://nppackages.github.io/scpi/
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.7
install_requires =
	cvxpy >= 1.1.18
	dask >= 2021.04.0
	ecos >= 2.0.7
	luddite >= 1.0.2
	numpy >= 1.20.1
	pandas >= 1.5.0
	plotnine >= 0.8.0
	scikit-learn >= 0.24.1
	scipy >= 1.7.1
	statsmodels >= 0.12.2
	
[options.packages.find]
where = src
