[metadata]
name = scpi_pkg
version = attr: scpi_pkg.version.__version__
author = Matias D. Cattaneo, Yingjie Feng, Filippo Palomba, Rocio Titiunik
author_email = Matias D. Cattaneo <matias.d.cattaneo@gmail.com>, Yingjie Feng <fengyingjiepku@gmail.com>, Filippo Palomba <filippo.palomba19@gmail.com>, Rocio Titiunik <rocio.titiunik@gmail.com>
maintainer = Matias D. Cattaneo
maintainer_email = matias.d.cattaneo@gmail.com
description = The package computes point estimates and prediction intervals for Synthetic Control methods with multiple treated units and staggered adoption as proposed in Cattaneo, Feng, Palomba, and Titiunik (2027).
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-only
url = https://nppackages.github.io/scpi/
project_urls =
	Bug Tracker = https://nppackages.github.io/scpi/
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.7
install_requires =
	cvxpy >= 1.1.18
	dask >= 2021.04.0
	ecos >= 2.0.7
	luddite >= 1.0.2
	mizani >= 0.8.1
	numpy >= 1.20.1
	pandas >= 1.5.0
	plotnine >= 0.8.0
	scikit-learn >= 0.24.1
	scipy >= 1.7.1
	statsmodels >= 0.12.2
	
[options.packages.find]
where = src
